base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bkereporting
spec:
  selector:
    matchLabels:
      app: bkereporting
  replicas: 1
  template:
    metadata:
      labels:
        app: bkereporting
    spec:
      containers:
      - name: bkereporting
        image: harbor.cis-qas.brown.edu/bkereporting/reporter
        imagePullPolicy: Always    
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: bkereporting
          mountPath: /usr/share/nginx/html
        - name: kubeconfigs
          mountPath: "/etc/kubeconfig"
          readOnly: true
        resources:
          requests:
            cpu: 150m
            memory: "200M"
          limits:
            cpu: 300m
            memory: "300M"
      volumes:
      - name: bkereporting
        persistentVolumeClaim:
          claimName: bkereporting
      - name: kubeconfigs
        projected:
          sources:
          - secret:
              name: prod-bked
          - secret:
              name: prod-bkei
          - secret:
              name: dr-bked
          - secret:
              name: dr-bkei
          - secret:
              name: qa-bked
          - secret:
              name: qa-bkei
          - secret:
              name: voutil2
          - secret:
              name: qa-voutil2
          - secret:
              name: dr-voutil2
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
