base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bkereporting
spec:
  ports:
  - port: 8080
  selector:
    app: bkereporting
